--- a/Pages/PasswordEntryDialog.razor
+++ b/Pages/PasswordEntryDialog.razor
@@ -1,6 +1,11 @@
-﻿<MudDialog>
+﻿<MudDialog Style="width: 80vw !important;">
     <DialogContent>
-        Dialog Content
+        <MudText Typo="Typo.body1">Password details.</MudText>
+        <MudTextField Label="Name" @bind-Value="@Entry.Name" />
+        <MudTextField Label="Username" @bind-Value="@Entry.Username" />
+        <MudTextField Label="Password" @bind-Value="@Entry.Password" />
+        <MudTextField Label="Url" @bind-Value="@Entry.Url" />
+        <MudTextField Label="Note" @bind-Value="@Entry.Note" />
     </DialogContent>
     <DialogActions>
         <MudButton OnClick="Cancel">Cancel</MudButton>
@@ -9,8 +14,27 @@
 </MudDialog>
 
 @code {
-    [CascadingParameter] MudDialogInstance MudDialog { get; set; }
+    [CascadingParameter]
+    #pragma warning disable 8618
+    public MudDialogInstance MudDialog { get; set; }
+    [Parameter]
+    public PasswordEntry Entry { get; set; }
+    private PasswordEntry _localEntry;
+    #pragma warning restore 8618
 
-    void Submit() => MudDialog.Close(DialogResult.Ok(true));
-    void Cancel() => MudDialog.Cancel();
+    protected override void OnParametersSet()
+    {
+        _localEntry = new PasswordEntry(Entry);
+    }
+
+    private void Submit()
+    {
+        // TODO 
+        // save the entry to the database!
+
+        // await PasswordService.UpdatePasswordEntryAsync(_localEntry);
+        MudDialog.Close(DialogResult.Ok(true));
+    }
+
+    private void Cancel() => MudDialog.Cancel();
 }
