--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -9,16 +9,17 @@
         Please login to access your stored passwords.
     </NotAuthorized>
     <Authorized>
+        <!--// TODO Ensure filter function correctly filters the list-->
         <MudTextField T="string" Label="Search" @bind-Value="@_searchText" @onblur="() => FilterEntries()"></MudTextField>
         @* <MudButton Variant="Variant.Filled" Color="Color.Primary" Class="ml-auto" OnClick="@SearchClicked">Search</MudButton> *@
 
         <MudList>
-            @foreach (var entry in _filteredEntries)
+            @foreach (var entry in _entries)
             {
                 <MudListItem>
                     <MudStack>
-                        <MudButton OnClick="@((e) => OpenDialog(closeButton))" Color="Color.Primary">@entry.Name</MudButton>
-                        @entry.Url
+                        <MudButton OnClick="@((e) => OpenDialog(entry))" Color="Color.Primary">@entry.Name</MudButton>
+                        <MudText Align="Align.Center">@entry.Url</MudText>
                     </MudStack>
                 </MudListItem>
             }
@@ -38,23 +39,39 @@
 
 @code {
     private string _searchText = string.Empty;
-    private List<PasswordEntry> _entries = GetHardcodedEntries();
-    private List<PasswordEntry> _filteredEntries = GetHardcodedEntries();
+    private static List<PasswordEntry> _entries = GetHardcodedEntries("original");
+    private List<PasswordEntry> _filteredEntries = new List<PasswordEntry>(_entries); //GetHardcodedEntries("orignial");
 
-    DialogOptions closeButton = new DialogOptions() { CloseButton = true };
     // DialogOptions noHeader = new DialogOptions() { NoHeader = true };
     // DialogOptions disableBackdropClick = new DialogOptions() { DisableBackdropClick = true };
     // DialogOptions fullScreen = new DialogOptions() { FullScreen = true, CloseButton = true };
     // DialogOptions topCenter = new DialogOptions() { Position = DialogPosition.TopCenter };
 
-    private void OpenDialog(DialogOptions options)
+    private async Task OpenDialog(PasswordEntry entry)
     {
-        // TODO
-        // we need to pass the entry to the dialog
-        Dialog.Show<PasswordEntryDialog>("DialogHeader", options);
+        var options = new DialogOptions() { CloseButton = true, CloseOnEscapeKey = true, Position = DialogPosition.Center };
+        var parameters = new DialogParameters<PasswordEntry>{{ "Entry", (object)entry }};
+
+        var dialog = await Dialog.ShowAsync<PasswordEntryDialog>("Password", parameters, options);
+        var result = await dialog.Result; // GetReturnValueAsync<PasswordEntry>();
+                                          // entry = result; // in my mind this inserts the object back into the list of entries, but needs testing
+
+        if (!result.Canceled)
+        {
+            // await fetch new data from the database here and update the list of entries
+            // _entries = await PasswordService.GetEntriesFromDatabase(userid);
+
+            _entries = GetHardcodedEntries("updated"); // await PasswordService.GetEntriesFromDatabase(userid);
+            StateHasChanged(); // the database should be updated here from the dialog so we have one point of truth
+        } 
+        // Else the dialog was canceled
+
+        // this is where we should update the database with the new entry
+        // we should have an update method which should pass the updated entry back to the parent component
     }
 
-    private static List<PasswordEntry> GetHardcodedEntries()
+    // method to get the hardcoded entries to simulate a database
+    private static List<PasswordEntry> GetHardcodedEntries(string uniqueness)
     {
         var entries = new List<PasswordEntry>();
 
@@ -64,11 +81,11 @@
                 {
                     EntryId = i,
                     UserId = 1,
-                    Url = $"https://example.com/{i}",
-                    Name = $"Example {i}",
-                    Note = $"This is an example note for entry {i}.",
-                    Username = $"user{i}",
-                    Password = $"password{i}",
+                    Url = $"https://{uniqueness}.com/{i}",
+                    Name = $"{uniqueness}Example {i}",
+                    Note = $"This is an {uniqueness}example note for entry {i}.",
+                    Username = $"user{i}{uniqueness}",
+                    Password = $"password{i}{uniqueness}",
                     CreatedAt = DateTime.Now,
                     UpdatedAt = DateTime.Now
                 });
