--- a/Pages/TopRightDialog.razor
+++ b/Pages/TopRightDialog.razor
@@ -11,7 +11,9 @@
 
 @code {
     [CascadingParameter]
+    #pragma warning disable CS8618
     public MudDialogInstance MudDialog { get; set; }
+    #pragma warning restore CS8618
 
     private void SubmitTRC() => MudDialog.Close(DialogResult.Ok(true));
     private void CancelTRC() => MudDialog.Cancel();
