--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -6,8 +6,9 @@
 
 <AuthorizeView>
     <NotAuthorized>
-        <MudText><h1>Welcome to PWM9</h1></MudText>
-        <MudText Typo="Typo.body1">Please login to access your stored passwords.</MudText>
+        <MudText><h1>Welcome to PW9</h1></MudText>
+        <MudText Typo="Typo.body1">Store your passwords securely and access them from anywhere.</MudText>
+        <MudText Typo="Typo.body1">Sign up to get started or please login to access your stored passwords.</MudText>
     </NotAuthorized>
     <Authorized>
         <MudTextField T="string" Label="Search" @bind-Value="@_searchText" Immediate="true" TextChanged="FilterEntries" @onblur="FilterEntries"></MudTextField>
