--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -7,7 +7,7 @@
         <MudText><h1>Welcome to PW9</h1></MudText>
         <MudText Typo="Typo.body1">Store your passwords securely and access them from anywhere.</MudText>
         <MudText Typo="Typo.body1">Sign up to get started or please login to access your stored passwords.</MudText>
-        <div style="display:flex;justify-content:center;margin-top:30px;">
+        <div style="display:flex;justify-content:center;margin-top:30px;" class="flip-horizontal">
             <MudImage Src="key.png" Alt="key" Elevation="1" Style="width:65%;height:auto;border:none;box-shadow:none;"></MudImage>
         </div>
     </NotAuthorized>
