--- a/Layout/MainLayout.razor
+++ b/Layout/MainLayout.razor
@@ -22,6 +22,7 @@
 <MudAppBar Bottom="true" Style="position:static;">
     <div style="display:flex;justify-content:center;width: -webkit-fill-available;">
         <p>&copy; 2024 - Joakim Dahl</p>
+        <p>Site built with Blazor WebAssembly.</p>
     </div>
 </MudAppBar>
 <MudScrollToTop>
