--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -8,7 +8,8 @@
         justify-content: center;
         align-items: center;
         width: 100%;
-        height: 100%; /* remove if using small-screen below */
+        height: 100%;
+        margin-block: 80px;
     }
 
     .responsive-image {
@@ -21,10 +22,6 @@
     .large-screen {
         height: 75vh;
     }
-
-    /* .small-screen {
-        height: 100%;
-    } */
 </style>
 
 <AuthorizeView>
@@ -33,7 +30,7 @@
         <MudText Typo="Typo.body1">Store your passwords securely and access them from anywhere.</MudText>
         <MudText Typo="Typo.body1">Sign up to get started or please login to access your stored passwords.</MudText>
         <MudContainer>
-            <div class="image-container" id="image-container-id">
+            <div class="image-container"> @* id="image-container-id" *@
                 <picture>
                     <!-- Use the vertical image for screens larger than 1024px -->
                     <source srcset="key_vertical.png" media="(min-width: 1024px)">
@@ -70,9 +67,12 @@
     </Authorized>
 </AuthorizeView>
 
+@* 
 <script>
     window.addEventListener('resize', applyResponsiveClass);
     waitForElementAndApplyResponsiveClass("image-container-id", 100);
+
+    // delete maybe tuesday or wednesday
     // document.addEventListener('DOMContentLoaded', function () {
     //     applyResponsiveClass();
     // });
@@ -100,3 +100,4 @@
         }
     }
 </script>
+ *@
