--- a/Layout/NavMenu.razor
+++ b/Layout/NavMenu.razor
@@ -28,7 +28,7 @@
             </div>
         </NotAuthorized>
         <Authorized>
-            <div class="nav-item px-3">
+            @* <div class="nav-item px-3">
                 <NavLink class="nav-link" href="counter">
                     <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
                 </NavLink>
@@ -37,7 +37,7 @@
                 <NavLink class="nav-link" href="weather">
                     <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
                 </NavLink>
-            </div>
+            </div> *@
             <div class="nav-item px-3">
                 <NavLink class="nav-link custom-nav-item">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
