--- a/Pages/Login.razor
+++ b/Pages/Login.razor
@@ -18,5 +18,11 @@
             </div>
             <ValidationSummary />
         </EditForm>
+        @if (_loginFailed)
+        {
+            <div class="alert alert-danger mt-3">
+                Login failed. Please try again.
+            </div>
+        }
     </div>
 </div>
